<resources>
  <string name="body">body</string>
  <string name="bottom">bottom</string>
  <string name="close">❌</string>
  <string name="cover_all">Cover Everything</string>
  <string name="cover_body">Cover Body</string>
  <string name="hide_bottom">Hide Bottom</string>
  <string name="hide_top">Hide Top</string>
  <string name="nuke">💣</string>
  <string name="reset">Reset</string>
  <string name="reveal_body">Reveal Body</string>
  <string name="show_bottom">Show Bottom Bar</string>
  <string name="show_top">Show Top Bar</string>
  <string name="use_compose">Use Compose</string>
  <string name="using_compose">Using Compose</string>
  <string name="app_name">Nested Overlays</string>
</resources>
