<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <Space
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <TextView
      android:id="@+id/login_error_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textColor="@color/colorAccent"
      android:textSize="24sp"
      />

  <Space
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <EditText
      android:id="@+id/login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/login_email_hint"
      android:inputType="textEmailAddress"
      />

  <EditText
      android:id="@+id/login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/login_password_hint"
      android:inputType="textPassword"
      android:saveEnabled="false"
      />

  <Button
      android:id="@+id/login_button"
      style="@style/Base.TextAppearance.AppCompat.Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/login_button"
      />

  <Space
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="2"
      />

</LinearLayout>
