<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/todo_editor_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:focusable="false"
      app:navigationIcon="?attr/homeAsUpIndicator"
      >
    <EditText
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="no"
        android:imeOptions="actionNext"
        android:inputType="textCapWords|textAutoCorrect"
        android:visibility="gone"
        />
  </androidx.appcompat.widget.Toolbar>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <LinearLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

  </ScrollView>

</LinearLayout>
